--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,14 @@ kotlin.mpp.enableCompatibilityMetadataVariant=true
 android.useAndroidX=true
 
 mobile.multiplatform.iosTargetWarning=false
+
+moko.android.targetSdk=30
+moko.android.compileSdk=30
+moko.android.minSdk=16
+
+moko.publish.name=MOKO fields
+moko.publish.description=Input forms for mobile (android & ios) Kotlin Multiplatform development
+moko.publish.repo.org=icerockdev
+moko.publish.repo.name=moko-fields
+moko.publish.license=Apache-2.0
+moko.publish.developers=alex009|Aleksey Mikhailov|Aleksey.Mikhailov@icerockdev.com,Tetraquark|Vladislav Areshkin|vareshkin@icerockdev.com
