--- a/sample-declarative-ui/androidApp/src/main/AndroidManifest.xml
+++ b/sample-declarative-ui/androidApp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dev.icerock.moko.mvvm.sample.declarativeui.android">
+    package="dev.icerock.moko.fields.sample.declarativeui.android">
 
     <application
         android:allowBackup="false"
