#39 fix android app manifest

--- a/sample-declarative-ui/androidApp/src/main/AndroidManifest.xml
+++ b/sample-declarative-ui/androidApp/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="dev.icerock.moko.fields.sample.declarativeui.android">
 
     <application
         android:allowBackup="false"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:usesCleartextTraffic="false"
+        android:theme="@style/AppTheme"
+        tools:targetApi="m">
         <activity
             android:name=".MainActivity"
             android:exported="true">
