--- a/sample-declarative-ui/androidApp/src/main/AndroidManifest.xml
+++ b/sample-declarative-ui/androidApp/src/main/AndroidManifest.xml
@@ -7,8 +7,7 @@
         android:allowBackup="false"
         android:supportsRtl="true"
         android:usesCleartextTraffic="false"
-        android:theme="@style/AppTheme"
-        tools:targetApi="m">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:exported="true">
