--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,23 +3,26 @@ kotlinVersion = "1.6.10"
 
 # android
 androidAppCompatVersion = "1.5.1"
-materialDesignVersion = "1.6.1"
+materialDesignVersion = "1.7.0"
 androidLifecycleVersion = "2.5.1"
 
 # kotlinx
-coroutinesVersion = "1.6.3-native-mt"
+coroutinesVersion = "1.6.3"
 
 # moko
 mokoResourcesVersion = "0.18.0"
 mokoMvvmVersion = "0.14.0"
 mokoTestVersion = "0.6.1"
-mokoFieldsVersion = "0.10.0"
+mokoFieldsVersion = "0.11.0"
 
 [libraries]
 # android
 appCompat = { module = "androidx.appcompat:appcompat", version.ref = "androidAppCompatVersion" }
 material = { module = "com.google.android.material:material", version.ref = "materialDesignVersion" }
-lifecycle = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "androidLifecycleVersion" }
+lifecycle = { module = "androidx.lifecycle:lifecycle-extensions", version = "2.2.0" }
+lifecycleKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidLifecycleVersion" }
+androidXLifecycle = { module = "androidx.lifecycle:lifecycle-common", version.ref = "androidLifecycleVersion"}
+
 
 # kotlinx
 coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutinesVersion" }
